<resources>
    <string name="app_name">RevCare</string>
    <string name="digite_seu_nome">Digite seu nome</string>
    <string name="digite_seu_telefone">Digite seu telefone</string>
    <string name="digite_seu_endere_o">Digite seu endereço</string>
    <string name="digite_seu_e_mail">Digite seu e-mail</string>
    <string name="cadastro_de_usu_rio">Cadastro de usuário</string>
    <string name="e_mail">E-mail</string>
    <string name="endere_o">Endereço</string>
    <string name="digite_seu_endereco">Digite seu descricao</string>
    <string name="digite_seu_cpf">Digite seu cpf</string>
    <string name="nome">Nome</string>
    <string name="descricao">Endereco</string>
    <string name="telefone">Telefone</string>
    <string name="cpf">CPF</string>
    <string name="data_de_nascimento">Data de Nascimento</string>
    <string name="finalizar_cadastro">Finalizar Cadastro</string>
    <string name="cadastro_de_usuario">cadastro_de_usuario</string>
    <string name="digite_sua_senha">Digite sua senha</string>
    <string name="confirma_senha">Confirme sua senha</string>
    <string name="Certificado">Certificado (Opcional)</string>
    <string name="logo">LOGO</string>
    <string name="finalizar_cads">Finalizar cadastro</string>
    <string name="dd_mm_aaaa">DD/MM/AAAA</string>
    <string name="continuar_cadastro">Continuar cadastro</string>
    <string name="logotipo">Logo</string>
    <string name="servi_os_agendados">Serviços agendados</string>
    <string name="lupa">Lupa</string>
    <string name="mais_button">+</string>
    <string name="nome_do_profissional">Nome do profissional</string>
    <string name="atualizar_perfil">Atualizar perfil</string>
    <string-array name="estados">
        <item></item>
        <item>Pernambuco</item>
        <item>Paraíba</item>
        <item>Ceará</item>
    </string-array>
    <string-array name="cidadesPE">
        <item></item>
        <item>Recife</item>
        <item>Olinda</item>
        <item>Paulista</item>
        <item>Abreu e Lima</item>
    </string-array>
    <string-array name="cidadesPB">
        <item></item>
        <item>João Pessoa</item>
        <item>Santa Rita</item>
    </string-array>
    <string-array name="cidadesCE">
        <item></item>
        <item>Fortaleza</item>
    </string-array>
</resources>
