<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".infra.gui.CadastroProfissional1Activity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="26dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="730dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="82dp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo"
                android:contentDescription="@string/logo" />

            <Button
                android:id="@+id/botaoFinalizarCadastro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="700dp"
                android:layout_marginRight="70dp"
                android:background="#AF0D25"
                android:text="@string/finalizar_cads"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.182"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/nomeTextField"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_marginTop="200dp"
                android:ems="10"
                android:hint="@string/digite_seu_nome"
                android:inputType="textPersonName"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.254"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="Autofill"
                android:layout_marginStart="5dp" />

            <EditText
                android:id="@+id/enderecoTextField"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_marginTop="360dp"
                android:ems="10"
                android:hint="@string/digite_seu_endereco"
                android:inputType="textPersonName"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.233"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="5dp"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/cpfTextField"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_marginTop="440dp"
                android:ems="10"
                android:hint="@string/digite_seu_cpf"
                android:inputType="number"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.245"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="5dp"
                tools:ignore="Autofill" />

            <TextView
                android:id="@+id/labelNome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="180dp"
                android:text="@string/nome"
                android:textColor="#0A0404"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.071"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="5dp" />

            <TextView
                android:id="@+id/labelDataNascimento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="260dp"
                android:text="@string/data_de_nascimento"
                android:textColor="#050101"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="5dp" />

            <TextView
                android:id="@+id/labelCpf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="420dp"
                android:text="@string/cpf"
                android:textColor="#0F0000"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.075"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="5dp" />

            <TextView
                android:id="@+id/labelEndereco"
                android:layout_width="180dp"
                android:layout_height="26dp"
                android:layout_marginTop="340dp"
                android:text="@string/endereco"
                android:textColor="#090101"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.077"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="5dp" />

            <EditText
                android:id="@+id/dataNascimentoTextField"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_marginTop="280dp"
                android:ems="10"
                android:hint="@string/dd_mm_aaaa"
                android:inputType="date"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.241"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="5dp" />

            <TextView
                android:id="@+id/labelTelefone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="500dp"
                android:text="@string/telefone"
                android:textColor="#0A0404"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.071"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/caixatxtEmailCadastro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="580dp"
                android:text="@string/e_mail"
                android:textColor="#050101"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/labelSenha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="840dp"
                android:text="@string/digite_sua_senha"
                android:textColor="#0F0000"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.075"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/emailTextField"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="520dp"
                android:ems="10"
                android:hint="@string/digite_seu_e_mail"
                android:inputType="textEmailAddress"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.241"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="Autofill" />

        </RelativeLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>