<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".infra.gui.HomeUsuario">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/barra_superior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#AF0D25"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/servi_os_agendados"
        android:textColor="#FEF7F7F7"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/barra_superior"
        app:layout_constraintStart_toStartOf="@+id/barra_superior"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/lupa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="#008F8497"
        app:layout_constraintEnd_toEndOf="@+id/barra_superior"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_search_category_default"
        android:contentDescription="@string/lupa" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="480dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="83dp"
        android:background="#cecece"
        tools:ignore="MissingConstraints">


    </ScrollView>

    <Button
        android:id="@+id/button"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:background="@drawable/button"
        android:text="@string/mais_button"
        android:textColor="#fff"
        android:textSize="35sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="327dp"
        tools:layout_editor_absoluteY="634dp" />

</androidx.constraintlayout.widget.ConstraintLayout>